--- a/js/array2.html
+++ b/js/array2.html
@@ -6,10 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>도서추가</h1>
+    <input type="text" class="book-name" placeholder="도서명">
+    <input type="text" class="author" placeholder="저자">
+    <input type="text" class="publisher" placeholder="출판사">
+    <button onclick="addBookOnClickHandle()">추가</button>
+    
+    <h1>도서목록</h1>
     <ol class="book-list">
         <!-- <li>
             <span>도서명</span> <span>저자</span> <span>출판사</span>
-        </li> 이 형태로 집어넣기 이 코드는 없어도 됌 -> js에서 다시 정의 -->
+        </li>-->
     </ol>
 
     <script src="array2.js"></script>
